[gd_scene load_steps=7 format=3 uid="uid://ri4p4yku5c51"]

[ext_resource type="Texture2D" uid="uid://d4ehidfubbijj" path="res://Sprites/space.png" id="1_uah3w"]
[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_wvqy6"]
[ext_resource type="FontFile" uid="uid://rl8rt4fgrhtp" path="res://Fonts/cubic/cubic.ttf" id="3_3hcja"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnmr0"]
bg_color = Color(1, 1, 1, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84ow1"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0n2mw"]
bg_color = Color(1, 1, 1, 0)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wvqy6")

[node name="AnotherHim" type="Sprite2D" parent="."]
self_modulate = Color(0.556953, 0.556953, 0.556953, 1)
position = Vector2(825.33, 501.5)
scale = Vector2(0.885417, 0.949074)
texture = ExtResource("1_uah3w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 200.0
offset_right = -200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Music" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3hcja")
theme_override_font_sizes/font_size = 31
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 10.0

[node name="Music2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3hcja")
theme_override_font_sizes/font_size = 31
text = "Sound Effects"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 10.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 865.675
offset_right = -1.0
offset_bottom = -84.325
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3hcja")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_qnmr0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_84ow1")
theme_override_styles/normal = SubResource("StyleBoxFlat_0n2mw")
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
